# pitchdetection

./: CMakeLists.txt  Makefile  pitchdetector.c
